--- a/css/forum.css
+++ b/css/forum.css
@@ -133,6 +133,33 @@
 .post-right, .post-right-avatar { padding:0px 4px 4px 0px; }
 .post-right img, .post-right-avatar img { max-width:100%; }
 
+/* Post Elements */
+.quote {
+	border-radius:4px;
+	margin-left:2em;
+	background-color:#c7e0ee;	
+	background-image:-linear-gradient(#c7e0ee, #e8eef1);
+	background-image:-moz-linear-gradient(top, #c7e0ee, #e8eef1);
+	background-image:-ms-linear-gradient(top, #c7e0ee, #e8eef1);
+	background-image:-o-linear-gradient(#c7e0ee, #e8eef1);
+	background-image:-webkit-gradient(linear, left top, left bottom, from(#c7e0ee), to(#e8eef1));
+	background-image:-webkit-linear-gradient(top, #c7e0ee, #e8eef1);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c7e0ee', endColorstr='#e8eef1');
+	padding:5px;
+}
+.quote:before
+{
+	content:"\201C ";
+	color:#2c7099;
+	font-family:Georgia, serif;
+	font-style:italic;
+	font-size:3em;
+	position:absolute;
+	margin-left:-0.75em;
+	margin-top:-0.25em;
+}
+.quote-by { text-align:right; font-style:italic; color:#2c7099; }
+
 /* Responsive Threads */
 @media (min-width:800px) {
 	.post-left, .post-left-avatar  { width:205px; }
