--- a/css/unifaction-base.css
+++ b/css/unifaction-base.css
@@ -328,8 +328,8 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 #footer-left { display:none; position:absolute; left:0px; padding:0; margin:0; }
 #footer-right { position:absolute; bottom:0px; right:0px; height:100%; }
 
-#ftbutton { padding:0 4px 0 2px; }
-#ftbutton>a { display:inline-block; line-height:35px; font-size:20px; padding:0 3px 0 3px; }
+#ftbutton { padding:0 4px 0 2px; height:100%; }
+#ftbutton>a { display:inline-block; line-height:35px; font-size:20px; padding:0px 3px 0 3px; }
 .foot-icon { font-size:22px; vertical-align:-10%; }
 
 
@@ -356,7 +356,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 	#friend-count { display:none; }
 	#notif-count { display:none; }
 	
-	.ftbutton>a { display:inline-block; line-height:45px; font-size:30px; padding:0 6px 0 6px; }
+	#ftbutton>a { display:inline-block; line-height:45px; font-size:30px; padding:0 4px 0 4px; }
 	.foot-icon { font-size:32px; vertical-align:-10%; }
 	
 }
@@ -428,7 +428,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 ****** Modal CSS ******
 **********************/
 
-.modal-bg { position:fixed; top:0px; left:0px; width:100%; height:100%; z-index:500; opacity:0.75; }
+.modal-bg { position:fixed; top:0px; left:0px; width:100%; height:100%; z-index:500; }
 .modal-box { position:fixed; top:50%; left:50%; margin-top:-140px; margin-left:-160px; height:220px; width:320px; z-index:501; padding:8px; border-radius:6px; }
 .modal-title { font-weight:bold; font-size:1.1em; }
 
@@ -535,7 +535,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 @media screen and (max-width:1200px) { .hide-1200 {display:none;} }
 @media screen and (max-width:1000px) { .hide-1000 {display:none;} }
 @media screen and (max-width:800px) { .hide-800 {display:none;} }
-@media screen and (max-width:600px) { .hide-600 {display:none;} }
+@media screen and (max-width:600px) { .hide-600 {display:none !important;} }
 @media screen and (max-width:400px) { .hide-400 {display:none;} }
 
 @media screen and (min-width:1200px) { .show-1200 {display:none;} }
@@ -760,7 +760,7 @@ body { background-color:#d9eaff; }
 .chat-inner { border-left:solid 1px #c0c0c0; border-right:solid 1px #c0c0c0; }
 
 /* Modal CSS */
-.modal-bg { background-color:#57c2c1; }
+.modal-bg { background-color:rgba(121,187,255, 0.75); }
 .modal-box { background-color:white; }
 .modal-button-wrap { background-color:#dddddd; border:solid 1px #b6b6b6; }
 .modal-button { color:#888888 !important; }
