--- a/css/unifaction-base.css
+++ b/css/unifaction-base.css
@@ -83,6 +83,7 @@ html { height:100%; }
 
 #container { height:100%; position:relative; }
 #content-wrap { margin-top:0px; min-height:100%; }
+#content-wrap * { box-sizing:border-box; -moz-box-sizing:border-box; -webkit-box-sizing:border-box; }
 
 /* Open Main Display */
 #content.content-open { background-color:white; padding:15px; }
@@ -156,7 +157,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 #header-right { position:absolute; top:0px; right:0px; height:60px; }
 
 /* Login Menu - User's Icon */
-#login-menu { position:relative; display:table-cell; vertical-align:top; padding:5px 7px 4px 4px; }
+#login-menu { position:relative; display:inline-block; vertical-align:top; padding:5px 7px 4px 4px; }
 #login-menu>ul { display:none; position:absolute; right:0px; top:45px; list-style-type: none; }
 #login-menu:hover ul { display:block; }
 
@@ -164,7 +165,7 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 
 /* Viewing User */
 @media screen and (min-width:381px) {
-	#viewing-user { position:relative; display:table-cell; vertical-align:top; padding-left:2px; width:120px; overflow:hidden; }
+	#viewing-user { position:relative; display:inline-block; vertical-align:top; padding-left:2px; width:120px; overflow:hidden; }
 	#viewing-user>img { padding-top:6px; }
 	#viewing-user>div { position:absolute; display:inline-block; top:10px; left:52px; line-height:17px; font-weight:bold; font-size:13px; }
 }
@@ -205,13 +206,13 @@ a.button { line-height:45px; vertical-align:middle; padding:8px 13px 8px 13px; b
 
 /* Search Navigation */
 @media screen and (min-width:1001px) {
-	#search-search { display:table-cell; width:600px; }
+	#search-search { display:inline-block; width:600px; }
 }
 @media screen and (min-width:851px) and (max-width:1000px) {
-	#search-search { display:table-cell; width:450px; }
+	#search-search { display:inline-block; width:450px; }
 }
 @media screen and (min-width:551px) and (max-width:850px) {
-	#search-search { display:table-cell; width:220px; }
+	#search-search { display:inline-block; width:220px; }
 }
 @media screen and (max-width:550px) {
 	/* #search-search { display:inline-block; width:150px; } */
