color for aides' user names

--- a/css/forum.css
+++ b/css/forum.css
@@ -231,3 +231,4 @@ pre:before
 .role-mod { color:orange !important; font-weight:bold; }
 .role-programmer { color:green !important; font-weight:bold; }
 .role-writer { color:teal !important; font-weight:bold; }
+.role-aide { color:black !important; }
