--- a/css/unifaction-text.css
+++ b/css/unifaction-text.css
@@ -1,6 +1,6 @@
 .quote, .spoiler, pre {
 	border-radius:4px;
-	margin-left:2em;
+	margin-left:32px;
 	background-color:#c7e0ee;	
 	background-image:-linear-gradient(#c7e0ee, #e8eef1);
 	background-image:-moz-linear-gradient(top, #c7e0ee, #e8eef1);
@@ -10,40 +10,37 @@
 	background-image:-webkit-linear-gradient(top, #c7e0ee, #e8eef1);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#c7e0ee', endColorstr='#e8eef1');
 	padding:5px;
+	position:relative;
 }
+.quote:before, .spoiler:before, pre:before
+{
+	color:#2c7099;
+	position:absolute;
+	text-align:center;
+	display:block;
+	left:-32px;
+	top:-0.25em;
+	width:32px;
+}
+
 .quote:before
 {
 	content:"\201C ";
-	color:#2c7099;
 	font-family:Georgia, serif;
 	font-style:italic;
 	font-size:3em;
-	position:relative;
-	left:-0.75em;
-	top:-0.25em;
-	float:left;
 }
 .spoiler:before
 {
 	content:"\e62b ";
-	color:#2c7099;
 	font-family:'icomoon';
 	font-size:1.5em;
-	position:relative;
-	left:-1.45em;
-	top:-0.25em;
-	float:left;
 }
 pre:before
 {
 	content:"\e63b ";
-	color:#2c7099;
 	font-family:'icomoon';
 	font-size:1.25em;
-	position:relative;
-	left:-1.75em;
-	top:-0.25em;
-	float:left;
 }
 .spoiler-header, .quote-by { color:#2c7099; cursor:pointer; border-radius:4px; }
 .spoiler-header:hover
